--- a/Shikhai/Views/ClassNames/Index.cshtml
+++ b/Shikhai/Views/ClassNames/Index.cshtml
@@ -21,6 +21,9 @@
             @Html.DisplayNameFor(model => model.UpdatedOnUtc)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.DisplayOrder)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Published)
         </th>
         <th></th>
@@ -37,13 +40,14 @@
         <td>
             @Html.DisplayFor(modelItem => item.UpdatedOnUtc)
         </td>
+        <td>@Html.DisplayFor(modelItem => item.DisplayOrder)</td>
         <td>
             @Html.DisplayFor(modelItem => item.Published)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
