--- a/Shikhai/Views/Testimonials/Index.cshtml
+++ b/Shikhai/Views/Testimonials/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.RawDBImagePath)
+            @Html.DisplayNameFor(model => model.PersonName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.ImagePath)
@@ -20,9 +20,7 @@
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PersonName)
-        </th>
+
         <th>
             @Html.DisplayNameFor(model => model.PersonTitle)
         </th>
@@ -30,7 +28,7 @@
             @Html.DisplayNameFor(model => model.CreatedOnUtc)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.UpdatedOnUtc)
+            @Html.DisplayNameFor(model => model.DisplayOrder)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Published)
@@ -41,17 +39,22 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.RawDBImagePath)
+            @Html.DisplayFor(modelItem => item.PersonName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.ImagePath)
+            @{
+                if (!string.IsNullOrEmpty(item.ImagePath))
+                {
+                    <a href="@item.ImagePath" data-lightbox="image-1" data-title="@item.PersonName">
+                        <img src="@item.ImagePath" class="img-display" alt="" />
+                    </a>
+                }
+            }
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Description)
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PersonName)
-        </td>
+
         <td>
             @Html.DisplayFor(modelItem => item.PersonTitle)
         </td>
@@ -59,15 +62,15 @@
             @Html.DisplayFor(modelItem => item.CreatedOnUtc)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.UpdatedOnUtc)
+            @Html.DisplayFor(modelItem => item.DisplayOrder)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Published)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </td>
     </tr>
 }
