--- a/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
+++ b/Shikhai/Views/Shared/_SideMenuLeftAdmin.cshtml
@@ -142,13 +142,13 @@
                     <span class="arrow"></span>
                 </a>
                 <ul class="sub-menu">
-                    @*<li class="nav-item  ">
-                        <a href="@Url.Action("Index", "Medicines")">
+                    <li class="nav-item  ">
+                        <a href="@Url.Action("Index", "ClassNames")">
                             <i class="icon-clock"></i>
-                            <span class="title">Medicines</span>
+                            <span class="title">Class Names</span>
                             <span class="badge badge-success">6</span>
                         </a>
-                    </li>*@
+                    </li>
                     <li class="nav-item  ">
                         <a href="@Url.Action("Index", "Teachers")">
                             <i class="icon-check"></i>
@@ -157,15 +157,28 @@
                         </a>
                     </li>
 
-                    @*<li class="nav-item  ">
-                        <a href="@Url.Action("Index", "Appointments")">
+                    <li class="nav-item  ">
+                        <a href="@Url.Action("Index", "Locations")">
                             <i class="icon-calendar"></i>
-                            <span class="title">Appoinments</span>
+                            <span class="title">Locations</span>
                             <span class="badge badge-success">6</span>
                         </a>
 
-                    </li>*@
-
+                    </li>
+                    <li class="nav-item  ">
+                        <a href="@Url.Action("Index", "Ranges")">
+                            <i class="icon-calendar"></i>
+                            <span class="title">Ranges</span>
+                            <span class="badge badge-success">6</span>
+                        </a>
+                    </li>
+                    <li class="nav-item  ">
+                        <a href="@Url.Action("Index", "Testimonials")">
+                            <i class="icon-calendar"></i>
+                            <span class="title">Testimonials</span>
+                            <span class="badge badge-success">6</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
 
