--- a/Shikhai/Content/superior/main2.css
+++ b/Shikhai/Content/superior/main2.css
@@ -25,7 +25,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300,400,600,700,800);
 
 
-.wp-caption,
+/*.wp-caption,
 .wp-caption-text,
 .gallery-caption,
 .bypostauthor {}
@@ -67,7 +67,7 @@ input[type="color"],
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-}
+}*/
 .form-group{ margin:0 0 40px;}
 .form-control::-moz-placeholder{
 	text-transform: capitalize;
