--- a/Shikhai/Views/Catalog/_LessonsPortfolio.cshtml
+++ b/Shikhai/Views/Catalog/_LessonsPortfolio.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Shikhai.Models.Portfolio 
 
-<h3>Browse Lessons</h3>
+<h3 class="text-center">Browse Lessons</h3>
 
 <div class="portfolio-content portfolio-4">
     <div id="js-filters-full-width" class="cbp-l-filters-alignCenter">
