--- a/Shikhai/Views/Catalog/_Testimonial.cshtml
+++ b/Shikhai/Views/Catalog/_Testimonial.cshtml
@@ -1,4 +1,7 @@
-﻿<style>
+﻿@model IEnumerable<Shikhai.Models.Testimonial>
+
+
+<style>
     #owl-demo .item {
         margin: 3px;
     }
@@ -71,38 +74,53 @@
 </style>
 
 
+@if (Model != null && Model.Count() > 0)
+{
 <div id="owl-demo" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
-    <div class="item" >
+    @foreach (var item in Model)
+    {
+    <div class="item">
         <div class="pic">
-            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+            <img src="@item.ImagePath">
         </div>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
-        </p>
-        <h3 class="title">Williamson</h3>
-        <span class="post">Web Developer</span>
+        <p class="description"> @item.Description  </p>
+        <h3 class="title"> @item.PersonName</h3>
+        <span class="post"> @item.PersonTitle</span>
     </div>
-
-    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
-        <div class="pic">
-            <img src="/Content/images/ShikhaiImages/parents.jpg">
-        </div>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
-        </p>
-        <h3 class="title">Williamson</h3>
-        <span class="post">Web Developer</span>
-    </div>
-
-    <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
-        <div class="pic">
-            <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
-        </div>
-        <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
-        </p>
-        <h3 class="title">Williamson</h3>
-        <span class="post">Web Developer</span>
-    </div>
+    }
 </div>
+}
+@*<div id="owl-demo" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
+        <div class="item">
+            <div class="pic">
+                <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
+            </p>
+            <h3 class="title">Williamson</h3>
+            <span class="post">Web Developer</span>
+        </div>
 
+        <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
+            <div class="pic">
+                <img src="/Content/images/ShikhaiImages/parents.jpg">
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
+            </p>
+            <h3 class="title">Williamson</h3>
+            <span class="post">Web Developer</span>
+        </div>
+
+        <div class="item" style="background-image: url('../Content/images/ShikhaiImages/pic-02.jpg');">
+            <div class="pic">
+                <img src="https://www.superiorlearning.ca/assets/front/images/tutor-inperson.png">
+            </div>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium ad asperiores at atque culpa dolores eaque fugiat hic illo ipsam ipsum minima modi necessitatibus nemo officia, omnis perferendis placeat quaerat quas quis ratione rerum sint sit vitae. Animi architecto consequatur delectus eos id.
+            </p>
+            <h3 class="title">Williamson</h3>
+            <span class="post">Web Developer</span>
+        </div>
+    </div>*@
