--- a/Shikhai/Views/Home/Index.cshtml
+++ b/Shikhai/Views/Home/Index.cshtml
@@ -90,9 +90,9 @@
 @{ Html.RenderAction("EasyAs123", "Catalog"); }
 
 @*testimonial*@
-
-@{ Html.RenderAction("Testimonial", "Catalog"); }
-
+<div class="margin-top-10">
+    @{ Html.RenderAction("Testimonial", "Catalog"); }
+</div>
 @*are you teacher*@
 <section id="TeacherCTA" class="Landing">
     <div class="Container">
