--- a/Shikhai/Views/Shared/_LayoutHead.cshtml
+++ b/Shikhai/Views/Shared/_LayoutHead.cshtml
@@ -204,7 +204,7 @@
 <link href="~/Content/superior/simplyscroll.css" rel="stylesheet" />
 <link href="~/Content/superior/wickedpicker.min.css" rel="stylesheet" />
 
-
+<link href="~/Content/superior/superior-style.css" rel="stylesheet" />
 
 @*default*@
 <link href="~/Content/Site.css" rel="stylesheet" />
