--- a/Shikhai/Views/Catalog/_HomePageSearch.cshtml
+++ b/Shikhai/Views/Catalog/_HomePageSearch.cshtml
@@ -1,45 +1,58 @@
 ﻿@model Shikhai.Models.HomePageSearch
 
+@using (Html.BeginForm("Create", "Newspapers", FormMethod.Post, new { enctype = "multipart/form-data", autocomplete = "on", oninput = "myAmountLimit1()" }))
+{
+    @Html.AntiForgeryToken()
 
-<div class="row" style="color:white;">
-    <div class="col-md-2">
-        <div class="form-group">
-            @*@Html.LabelFor(m => m.SelectedCategoryId, new { @class = "col-md-2 control-label" })*@
-            <div class="col-md-12">
-                @Html.DropDownListFor(model => model.SelectedCategoryId, Model.Category, "Category", new { @class = "form-control" })
+    <div class="row" style="color:white;">
+        <div class="col-md-2">
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.SelectedCategoryId, new { @class = "col-md-2 control-label" })*@
+                <div class="col-md-12">
+                    @Html.DropDownListFor(model => model.SelectedCategoryId, Model.Category, "Category", new { @class = "form-control" })
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-md-2">
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.SelectedClassNameId, new { @class = "col-md-2 control-label" })*@
+                <div class="col-md-12">
+                    @Html.DropDownListFor(model => model.SelectedClassNameId, Model.ClassName, "Class", new { @class = "form-control" })
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.SelectedSubjectId, new { @class = "col-md-2 control-label" })*@
+                <div class="col-md-12">
+                    @*@Html.DropDownListFor(model => model.SelectedSubjectId, Model.Subject, "---Select Parent Category---", new { @class = "form-control" })*@
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.SelectedLocationId, new { @class = "col-md-2 control-label" })*@
+                <div class="col-md-12">
+                    @Html.DropDownListFor(model => model.SelectedLocationId, Model.Location, "Location", new { @class = "form-control" })
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                @*@Html.LabelFor(m => m.SelectedRangeId, new { @class = "col-md-2 control-label" })*@
+                <div class="col-md-12">
+                    @Html.DropDownListFor(model => model.SelectedRangeId, Model.Range, "Range", new { @class = "form-control" })
+                </div>
             </div>
         </div>
     </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            @*@Html.LabelFor(m => m.SelectedClassNameId, new { @class = "col-md-2 control-label" })*@
-            <div class="col-md-12">
-                @Html.DropDownListFor(model => model.SelectedClassNameId, Model.Category, "Class", new { @class = "form-control" })
-            </div>
-        </div>
+
+    <div class="form-group action_button" style="margin-top:10px;">
+        <button class="button search_button text-center col-md-4 col-md-offset-3">FIND A TUTOR NOW!</button>
     </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            @*@Html.LabelFor(m => m.SelectedSubjectId, new { @class = "col-md-2 control-label" })*@
-            <div class="col-md-12">
-                @*@Html.DropDownListFor(model => model.SelectedSubjectId, Model.Subject, "---Select Parent Category---", new { @class = "form-control" })*@
-            </div>
-        </div>
+    <div style="margin-top:10px;">
+        <h3 class="text-center col-md-4 col-md-offset-3">or Call <strong>01720-229697</strong></h3>
     </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            @*@Html.LabelFor(m => m.SelectedLocationId, new { @class = "col-md-2 control-label" })*@
-            <div class="col-md-12">
-                @Html.DropDownListFor(model => model.SelectedLocationId, Model.Location, "Location", new { @class = "form-control" })
-            </div>
-        </div>
-    </div>
-    <div class="col-md-2">
-        <div class="form-group">
-            @*@Html.LabelFor(m => m.SelectedRangeId, new { @class = "col-md-2 control-label" })*@
-            <div class="col-md-12">
-                @Html.DropDownListFor(model => model.SelectedRangeId, Model.Range, "Range", new { @class = "form-control" })
-            </div>
-        </div>
-    </div>
-</div>
+}
