--- a/Shikhai/Views/Home/WhyUs.cshtml
+++ b/Shikhai/Views/Home/WhyUs.cshtml
@@ -1,29 +1,8 @@
-﻿<main id="tg-main" class="tg-main tg-haslayout">
+﻿<main id="tg-main" class="tg-main tg-haslayout"  style="background-color:white;">
     <div class="container">
         <div class="row">
             <div class="col-md-3">
-                <div class="ui sidebar_nav vertical pointing menu">
-                    <a class="item active" href="https://www.superiorlearning.ca/about/why-us">
-                        Why Us
-                        <i class="fa fa-angle-right pull-right"></i>
-                    </a>
-                    <a class="item  " href="https://www.superiorlearning.ca/about/how-we-work">
-                        How We Work
-                        <i class="fa fa-angle-right pull-right"></i>
-                    </a>
-                    <a class="item  " href="https://www.superiorlearning.ca/about/faq-for-students">
-                        FAQ for Students
-                        <i class="fa fa-angle-right pull-right"></i>
-                    </a>
-                    <a class="item  " href="https://www.superiorlearning.ca/about/faq-for-tutors">
-                        FAQ for Tutors
-                        <i class="fa fa-angle-right pull-right"></i>
-                    </a>
-                    <a class="item  " href="https://www.superiorlearning.ca/about/testimonials">
-                        Testimonials
-                        <i class="fa fa-angle-right pull-right"></i>
-                    </a>
-                </div>
+                @Html.Partial("_FAQMenu")
             </div>
             <div class="col-md-9">
                 <h4>Why Superior Learning</h4>
